2008-03-08  Dan Williams  <dcbw@redhat.com>

	Patch from Bas Zoetekouw <bas@debian.org>

	* src/nm-ip4-config.c
	  src/nm-ip4-config.h
		- (nm_ip4_config_add_search, nm_ip4_config_get_search,
		   nm_ip4_config_get_num_searches): add 'searches' as distinct from
			domains.  'searches' is the correct way to store multiple search
			domains, whereas 'domains' is really just supposed to store one
			domain.  Some sites abuse the DHCP 'domain-name' option to push
			search domains to the client.
		- (nm_ip4_config_add_domain): group with related functions (my patch)

2008-03-06  Dan Williams  <dcbw@redhat.com>

	Release 0.6.6

2008-03-06  Dan Williams  <dcbw@redhat.com>

	* autogen.sh
		- Die gnome-common, die

2008-03-06  Tambet Ingo  <tambet@gmail.com>

	* src/backends/shvar.c (unescape): Fix a bug where empty strings ('') get
	unescaped to a single quote (').

2008-03-04  Dan Williams  <dcbw@redhat.com>

	Patch from Michael Biebl <biebl@debian.org>

	* NetworkManager.pc.in
		- Doesn't actually require anything special at build time

	* gnome/libnm_glib/libnm_glib.pc.in
		- Doesn't require dbus/dbus-glib headers at build time

	* libnm-util/libnm-util.pc.in
		- Doesn't require glib headers at build time

2008-03-04  Tambet Ingo  <tambet@gmail.com>

	* src/nm-device-802-3-ethernet.c (nm_device_802_3_ethernet_get_speed):
	Add a workaround for broken driver that return -1 for the speed.

2008-02-28  Saleem Abdulrasool  <compnerd@compnerd.org>

	* src/backends/NetworkManagerGentoo.c:
	(nm_system_restart_mdns_responder),
	(nm_system_device_add_ip6_link_address), (svGetArray),
	(GentooReadConfig), (nm_system_device_get_system_config),
	(nm_system_device_get_disabled), (nm_system_set_hostname),
	(nm_system_get_mtu):
		Apply patch from the Gentoo tree at steev's request.

2008-02-28  Saleem Abdulrasool  <compnerd@compnerd.org>

	reviewed by: Steev <steev@steev.net>

	* initscript/Gentoo/Makefile.am:
	* initscript/Gentoo/NetworkManagerDispatcher.in: